--- a/assets/pop-out-panel/full.html
+++ b/assets/pop-out-panel/full.html
@@ -1,4 +1,14 @@
 <script>
+  //window.sideMenuUrl = document.location.origin + '/page-for-slider-menu';
+  //window.buttonText = "Info + Contact";
+
+  var script = document.createElement('script');
+  script.src = 'https://www.ghosthub.boo/assets/pop-out-panel/index.js';
+  document.body.appendChild(script);
+</script>
+
+<!-- <script src="https://www.ghosthub.boo/assets/pop-out-panel/index.js"></script> -->
+<script>
   //var sideMenuUrl = document.location.origin + '/page-for-slider-menu';
 
   fetch(sideMenuUrl)
