--- a/assets/pop-out-panel/full.html
+++ b/assets/pop-out-panel/full.html
@@ -1,3 +1,8 @@
+<!-- Code Injection > Header -->
+<link rel="stylesheet" href="https://www.ghosthub.boo/assets/pop-out-panel/pop-out-panel.css">
+<!-- Code Injection > Header -->
+
+<!-- Code Injection > Footer -->
 <script>
   //window.sideMenuUrl = document.location.origin + '/page-for-slider-menu';
   //window.buttonText = "Info + Contact";
@@ -115,3 +120,4 @@
     }
   });
 </script>
+<!-- Code Injection > Footer -->
